--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,22 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon ./src/server.js --watch . --exec babel-node"
+    "dev": "nodemon ./server.js --watch . --exec babel-node",
+    "start": "nodemon --ext js,graphql --ignore data/ server.js"
   },
   "keywords": [],
   "author": "",
   "license": "",
   "dependencies": {
-    "express": "^4.17.1"
+    "apollo-server": "^2.19.2",
+    "apollo-server-express": "^2.19.2",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "notarealdb": "^0.2.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
